--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    asdfasdfasdfasd
+    <div></div>
+    <div></div>
+    <div></div>
+    
     
 </body>
 </html>
